force-app/main/default/objects/Activity/fields/OLD_WHAT_ID__c.field-meta.xml
<CustomField>
    <fullName>OLD_WHAT_ID__c</fullName>
    <label>OLD WHAT ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>