force-app/main/default/objects/Activity/fields/OlD_WHO_ID__c.field-meta.xml
<CustomField>
    <fullName>OlD_WHO_ID__c</fullName>
    <label>OlD WHO ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>